<resources>
    <string name="app_name" translatable="false">AgroEco R</string>
    <string name="userAliasLabel">User name</string>
    <string name="loginButtonText">Log in</string>
    <string name="loginScreenTitle">Agroeco Research</string>
    <string name="userPasswordLabel">Password</string>
    <string name="registerButtonText">Save</string>
    <string name="editButtonText">Edit</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="defineServerTitle">Define server</string>
    <string name="defineServerLabel">Enter server URL</string>
    <string name="emptyString"></string>
    <string name="connectingMessage">Connecting ...</string>
    <string name="checkConnectionMessage">Check internet connection</string>
    <string name="invalidUserMessage">Invalid user or password</string>
    <string name="mainMenuTitle">Main menu</string>
    <string name="registerActivityButtonText">ENTER ACTIVITY</string>
    <string name="registerMeasurementButtonText">ENTER MEASUREMENT</string>
    <string name="manageDataButtonText">MANAGE DATA</string>
    <string name="settingsButtonText">SETTINGS</string>
    <string name="logoutButtonText">LOG OUT</string>
    <string name="downloadCatalogsButtonText">Download catalogs</string>
    <string name="defineEditFieldsButtonText">Define/edit fields</string>
    <string name="settingsTitle">Settings</string>
    <string name="controlPanelButtonText">Control panel</string>
    <string name="pleaseConnectMessage">Please connect to the Internet</string>
    <string name="downloadCropsText">CROPS</string>
    <string name="downloadTreatmentsText">TREATMENTS</string>
    <string name="downloadSelectedButton">Download selected</string>
    <string name="downloadCatalogsTitle">Download catalogs</string>
    <string name="downloadMeasurementsText">MEASUREMENTS</string>
    <string name="downloadActivitiesText">ACTIVITIES</string>
    <string name="downloadFieldsText">FIELDS</string>
    <string name="noCatalogsSelectedText">No catalogs selected</string>
    <string name="downloadCatalogsProgressDialogTitle">Downloading</string>
    <string name="chooseFieldPlotTitle">Enter</string>
    <string name="chooseFieldPrompt">Choose a field</string>
    <string name="choosePlotPrompt">Choose plots</string>
    <string name="chooseSinglePlotPrompt">Choose a plot</string>
    <string name="enterDataButton">Enter data</string>
    <string name="registerInputButton">Enter INPUT</string>
    <string name="chooserTitle">Choose</string>
    <string name="logoutAlertTitle">Log out</string>
    <string name="logoutAlertString">Do you want to log out?</string>
    <string name="enterDateText">Date</string>
    <string name="enterValueText">Value</string>
    <string name="enterCommentsText">Comments</string>
    <string name="enterActivityTitle">Activity</string>
    <string name="enterValidNumberText">Please enter a valid number</string>
    <string name="neverText">Never</string>
    <string name="todayText">Today</string>
    <string name="daysAgoText">days ago</string>
    <string name="lastText">Last</string>
    <string name="yesterdayText">Yesterday</string>
    <string name="manageDataTitle">Manage data</string>
    <string name="logTableTitle">Logged data</string>
    <string name="sendMenuText">Send</string>
    <string name="deleteMenuText">Delete</string>
    <string name="filtersMenuText">Filters</string>
    <string name="noLoggedDataMessage">No logged data</string>
    <string name="okButtonText">OK</string>
    <string name="manageInputsMenuText">Manage inputs</string>
    <string name="invertSelectedMenuText">Invert selection</string>
    <string name="noEntriesSelectedText">No entries selected</string>
    <string name="deleteAlertTitle">Delete</string>
    <string name="deleteAlertString">Delete selected entries?</string>
    <string name="sendingDataMessage">Sending data</string>
    <string name="pleaseWaitMessage">Please wait...</string>
    <string name="invalidParametersMessage">Invalid parameters, please log in again</string>
    <string name="unableToSendMessage">Unable to send, please try again</string>
    <string name="enterMeasurementTitle">Measurement</string>
    <string name="enterSampleNumberText">Sample number</string>
    <string name="enterQualitativeValueText">Choose value</string>
    <string name="valueOutOfRangeText">Value is out of range</string>
    <string name="enterValidCategoryText">Please enter a valid category</string>
    <string name="enterValidCategoryTextSample">Please enter a valid category in sample x</string>
    <string name="cropsTableRowText">Crops</string>
    <string name="treatmentsTableRowText">Treatments</string>
    <string name="enterCropAgeText">Age (days)</string>
    <string name="enterCropOriginText">Origin</string>
    <string name="enterCropCostText">Total cost (local currency)</string>
    <string name="enterCropQuantityText">Total quantity</string>
    <string name="enterCropInputTitle">Crop input</string>
    <string name="enterTreatmentMaterialText">Ingredients (comma separated)</string>
    <string name="enterTreatmentQuantityText">Quantities and units per plot\n(comma separated)</string>
    <string name="enterTreatmentPreparationMethodText">Preparation method</string>
    <string name="enterTreatmentCostText">Total cost (local currency)</string>
    <string name="enterTreatmentInputTitle">Treatment input</string>
    <string name="activitiesMeasurementsTableTitle">Activities and measurements</string>
    <string name="inputsTableTitle">Inputs</string>
    <string name="otherListText">Other ...</string>
    <string name="otherButtonText">Other (enter below)</string>
    <string name="enterUnitsText">Units</string>
    <string name="chooseCategoryPrompt">Choose category</string>
    <string name="registerMeasurementLabel">Enter measurement</string>
    <string name="chooseMeasurementTitle">Choose measurement</string>
    <string name="chosenXNotApplicable">Chosen x is not applicable to this field</string>
    <string name="noPlotsChosen">Please choose at least one plot</string>
    <string name="enterLaborersText">Total number of laborers</string>
    <string name="enterActivityCostText">Total cost (local currency)</string>
    <string name="samplesTitle">Sample</string>
    <string name="addSampleText">Add sample</string>
    <string name="valuesTitle">Value</string>
    <string name="chooseValueSampleTable">...</string>
    <string name="enterSamplesText">Values</string>
    <string name="sampleOutOfRange">Sample number x is out of range</string>
    <string name="sampleNumberIsRepeated">Sample number x was entered more than once</string>
    <string name="deleteSampleTitle">Delete sample</string>
    <string name="deleteSampleString">Do you want to delete sample number x?</string>
    <string name="enterOtherValueLabel">Enter other value</string>
    <string name="closeButtonText">Close</string>
    <string name="noDescriptionAvailableText">No description available</string>
    <string name="notificationsTitle">Notifications:</string>
    <string name="notificationsLabel">Notifications</string>
    <string name="deleteNotificationMessage">Delete notification?</string>
    <string name="deleteNotification">Delete</string>
    <string name="opEnterActivity">Enter activity</string>
    <string name="opEnterInput">Enter input</string>
    <string name="opEnterMeasurement">Enter measurement</string>
    <string name="opManageData">Manage data</string>
    <string name="opMainMenu">Main menu</string>
    <string name="enterValidTextText">Text must not be empty</string>
    <string name="exitAlertString">Exit without saving?</string>
    <string name="exitAlertTitle">Exit</string>
    <string name="copyRequestTitle">Copy</string>
    <string name="copyRequestString">Copy to other replications?</string>
    <string name="yesButtonText">Yes</string>
    <string name="noButtonText">No</string>
    <string name="enterCropVarietyText">Variety</string>
    <string name="enterInputUnitsText">Units</string>
    <string name="defaultUnits">kg</string>
    <string name="healthReportButtonText">Health report</string>
    <string name="enterHealthReportText">Health report</string>
    <string name="healthReportItemsTitle">Item</string>
    <string name="healthReportLabel">Health report</string>
    <string name="healthReportButtonDefaultText">GOOD</string>
    <string name="titleEnterActivity">Enter activity</string>
    <string name="chooseActivityButtonTitle">Choose activity</string>
    <string name="chooseValidActivityText">Please choose an activity</string>
    <string name="ingredientsTitle">Ingredient</string>
    <string name="unitsTitle">Units</string>
    <string name="quantitiesTitle">Qty</string>
    <string name="addIngredientText">Add ingredient</string>
    <string name="ingredientQuantityOutOfRange">Quantity of x is out of range</string>
    <string name="deleteIngredientString">Do you want to delete ingredient x?</string>
    <string name="deleteIngredientTitle">Delete ingredient</string>
    <string name="emptyIngredientMessage">Ingredient x data is invalid</string>
    <string name="enterActivityValueText">Total value</string>
</resources>
