<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".downloadCatalogs"
        android:focusableInTouchMode="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/downloadActivitiesText"
            android:id="@+id/downloadActivities"
            android:button="@drawable/custom_checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/downloadCropsText"
            android:id="@+id/downloadCrops"
            android:button="@drawable/custom_checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/downloadFieldsText"
            android:id="@+id/downloadFields"
            android:button="@drawable/custom_checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/downloadMeasurementsText"
            android:id="@+id/downloadMeasurements"
            android:button="@drawable/custom_checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/downloadTreatmentsText"
            android:id="@+id/downloadTreatments"
            android:button="@drawable/custom_checkbox"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadSelectedButton"
            android:id="@+id/download"
            android:onClick="downloadSelected"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="34dp"
            android:height="40dp"
            android:textSize="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>