<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/measurementLayout"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".enterMeasurement"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emptyString"
            android:textColor="@color/colorWhite"
            android:id="@+id/fieldPlotText"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterDateText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterDateText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emptyString"
            android:id="@+id/dateButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterSamplesText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterSamplesText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:shrinkColumns="1"
            android:id="@+id/samples">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emptyString"
                    android:id="@+id/header1"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samplesTitle"
                    android:id="@+id/header2"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valuesTitle"
                    android:id="@+id/header3"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
            </TableRow>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/childScrollView">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="1,2"
                    android:id="@+id/samplesTable">
                </TableLayout>
            </ScrollView>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addSampleText"
            android:id="@+id/addSample"
            android:textSize="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterValueText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterValueText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/measurementValue"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:singleLine="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterQualitativeValueText"
            android:id="@+id/measurementCategory"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/measurementOtherTextValue"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterCommentsText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterCommentsText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/measurementComments"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registerButtonText"
            android:id="@+id/okButton"
            android:onClick="registerMeasurement"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>