<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/measurementLayout"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".enterMeasurement"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emptyString"
            android:textColor="@color/colorWhite"
            android:id="@+id/treatmentInputTitle"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterDateText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterDateText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emptyString"
            android:id="@+id/dateButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:shrinkColumns="0"
            android:id="@+id/ingredients">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emptyString"
                    android:id="@+id/header1"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientsTitle"
                    android:id="@+id/header2"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantitiesTitle"
                    android:id="@+id/header3"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unitsTitle"
                    android:id="@+id/header4"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
            </TableRow>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/childScrollView">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="1,2,3"
                    android:id="@+id/ingredientsTable">
                </TableLayout>
            </ScrollView>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addIngredientText"
            android:id="@+id/addIngredient"
            android:textSize="20dp"
            android:onClick="addIngredient"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterTreatmentPreparationMethodText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterTreatmentPreparationMethodText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/treatmentPreparationMethod"
            android:layout_marginTop="20dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterTreatmentCostText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterTreatmentCostText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/treatmentCost"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterCommentsText"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterCommentsText"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/inputComments"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registerButtonText"
            android:onClick="registerTreatment"
            android:id="@+id/okButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</ScrollView>